--- a/furuma_manager/src/main/resources/templates/navbar.html
+++ b/furuma_manager/src/main/resources/templates/navbar.html
@@ -63,9 +63,7 @@
 
                 </ul>
                 <form class="d-flex" role="search" >
-                    <input class="form-control me-2" type="search" placeholder="name" aria-label="Search" name="name">
-                    <input class="form-control me-2" type="search" placeholder="email" aria-label="Search" name="email">
-                    <input class="form-control me-2" type="search" placeholder="typeCustomer" aria-label="Search" name="typeCustomer">
+                    <input class="form-control me-2" type="search" placeholder="" aria-label="Search" name="typeCustomer">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
