--- a/furuma_manager/src/main/resources/templates/contract/list.html
+++ b/furuma_manager/src/main/resources/templates/contract/list.html
@@ -5,6 +5,8 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="../../static/bootstrap-5.3.0-alpha1-dist/bootstrap-5.3.0-alpha1-dist/js/bootstrap.esm.js"></script>
+    <script src="../../static/bootstrap-5.3.0-alpha1-dist/bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.js"></script>
 </head>
 <body>
 
@@ -131,14 +133,21 @@
                             <span>Ngày bắt đầu</span>
                         </div>
                         <div class="col-md-9">
-                            <input type="date" class="form-control" id="startDay">
+                            <input  class="form-control" id="startDay" min="2022-12-22"
+                                   data-date-format="DD MMMM YYYY"
+                                    type="date"
+                                />
                         </div>
                         <div class="col-md-3">
                             <span>Ngày kết thúc</span>
                         </div>
                         <div class="col-md-9">
-                            <input type="date" class="form-control" id="endDay">
+                            <input type="date" class="form-control" id="endDay" oninput="checkDate()"
+                                   title="Ngày theo định dạng DD/MM/YYYY"  >
+
+                            <p style="color: red" id="showErrors"></p>
                         </div>
+
                         <div class="col-md-3">
                             <span>Tiền gửi</span>
                         </div>
@@ -147,7 +156,6 @@
                         </div>
                         <div class="col-md-3">
                             <span>Tổng tiền</span>
-
                         </div>
                         <div class="col-md-9">
                             <input type="number" id="sumCost" class="form-control" readonly>
@@ -196,7 +204,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" th:attr="onclick=|saveContract()|">Save changes
+                    <button type="button" class="btn btn-primary" th:attr="onclick=|saveContract()|" disabled id="save">
+                        Save changes
                     </button>
                 </div>
             </form>
@@ -207,6 +216,22 @@
 <div th:insert="~{navbar :: footer}"></div>
 </body>
 <script>
+    function checkDate() {
+        let startDay = document.getElementById("startDay").value
+        let endDay = document.getElementById("endDay").value
+        let startDay1=new Date(startDay)
+        let endDay1=new Date(endDay)
+        let different = endDay1 - startDay1;
+
+        if (different < 0) {
+            document.getElementById("showErrors").innerText = "ngày kết thúc hợp đồng phải lớn hơn ngày bắt đầu";
+            document.getElementById("save").disabled = true;
+        } else {
+            document.getElementById("save").disabled = false;
+
+        }
+
+    }
 
     function createContractDetail(id) {
         document.getElementById("idCreate").value = id;
@@ -291,8 +316,11 @@
 
 
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+
+<script src="bootstrap-5.3.0-alpha1-dist/js/bootstrap.js"></script>
+
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"-->
+<!--        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"-->
+<!--        crossorigin="anonymous"></script>-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </html>
