--- a/furuma_manager/src/main/resources/templates/home.html
+++ b/furuma_manager/src/main/resources/templates/home.html
@@ -45,7 +45,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-0 mb-lg-2">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/employee">Employee</a>
@@ -55,7 +55,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="facility.html">Service</a>
+                            <a class="nav-link disabled" href="/contract">Contract</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled">Contract</a>
