--- a/furuma_manager/src/main/resources/templates/customer/list.html
+++ b/furuma_manager/src/main/resources/templates/customer/list.html
@@ -7,7 +7,7 @@
           rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
           crossorigin="anonymous">
     <style>
-        a{
+        a {
             text-decoration: none;
         }
     </style>
@@ -75,7 +75,7 @@
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="name" aria-label="Search"
-                               name="name" th:value="${name}" >
+                               name="name" th:value="${name}">
                         <input class="form-control me-2" type="search" placeholder="email" aria-label="Search"
                                name="email" th:value="${email}">
                         <select name="typeCustomer">
@@ -130,33 +130,46 @@
         </td>
     </tr>
 </table>
-
 <!-- Modal create-->
-<div th:class="${hasErr=='true'? 'modal fade show':'modal fade'}"
-     th:style="${hasErr =='true' ?'display:block':'display:none'}" id="create">
+<div th:class="${hasedit=='true'? 'modal fade show':'modal fade'}"
+     th:style="${hasedit =='true' ?'display:block':'display:none'}"
+     id="create" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <h3 class="align-text-top">Create Customer</h3>
-            <form method="post" th:object="${customer}" th:action="@{/customer/create}">
+            <form method="post" th:object="${customerDto}" th:action="@{/customer/create}">
                 <div>
                     <span class="text"> Name</span>
                     <input class="form-control" type="text" th:field="*{name}" required>
+                    <p style="color:red;" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+
                     <span class="text">Day Of Brith</span>
                     <input class="form-control" type="date" th:field="*{dayOfBrith}" required>
-                    <span class="text">Id Card</span>
+                    <p style="color: red" th:if="${#fields.hasErrors('dayOfBrith')}" th:errors="*{dayOfBrith}"></p>
+
+                    <p class="text">Id Card</p>
                     <input class="form-control" type="text" th:field="*{idCard}" required>
+                    <p style="color: red;" th:if="${#fields.hasErrors('idCard')}" th:errors="*{idCard}"></p>
+
                     <span class="text">Phone Number</span>
-                    <input class="form-control" type="text" th:field="*{phoneNumber}" required>
+                    <input type="text" th:field="*{phoneNumber}" required>
+                   <p style="color:red;" th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"></p>
+
                     <span class="text">Email</span>
                     <input class="form-control" type="email" th:field="*{email}" required>
+                    <p style="color:red;" th:if="${#fields.hasErrors()}" th:errors="*{email}"></p>
+
                     <span class="text">Address</span>
                     <input class="form-control" type="text" th:field="*{address}">
+
                     <span class="text">Type</span>
                     <select th:field="*{customerType}">
                         <option th:each="customerType: ${customerTypes}" th:text="${customerType.name}"
                                 th:value="${customerType.id}"></option>
                     </select>
+
                     <p style="color: red" th:text="${error}"></p>
+
                     <br>
                     <span class="radio">Gender</span>
                     <input type="radio" th:field="*{gender}" th:value="1" th:text="Nam">
@@ -177,20 +190,29 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <h3 class="align-text-top">Edit Customer</h3>
-            <form method="post" th:object="${customer}" th:action="@{/customer/edit}">
+            <form method="post" th:object="${customerDto}" th:action="@{/customer/edit}">
                 <div>
 
                     <input th:field="*{id}" hidden id="id">
                     <span class="text"> Name</span>
                     <input class="form-control" type="text" id="nameEdit" th:field="*{name}" required>
+                    <p th:if="${#fields.hasErrors('name')}" th:errors="${name}" style="color: red"></p>
+
                     <span class="text">Day Of Brith</span>
                     <input class="form-control" type="date" id="day" th:field="*{dayOfBrith}" required>
+
                     <span class="text">Id Card</span>
                     <input class="form-control" type="text" id="idCardEdit" th:field="*{idCard}" required>
+                    <p th:if="${#fields.hasErrors('idCard')}" th:errors="*{idCard}" style="color: red"></p>
+
                     <span class="text">Phone Number</span>
                     <input class="form-control" type="text" id="phone" th:field="*{phoneNumber}" required>
+                    <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"></p>
+
                     <span class="text">Email</span>
                     <input class="form-control" type="email" id="emailEdit" th:field="*{email}">
+                    <p th:if="${#fields.hasErrors('email')}" th:errors="${email}" style="color: red;"> </p>
+
                     <span class="text">Address</span>
                     <input class="form-control" type="text" id="addressEdit" th:field="*{address}">
                     <span class="text">Type</span>
@@ -235,11 +257,11 @@
 <!--phân trang-->
 <div class="col-md-12 col-sm-12 " style="float: right;">
     <a class="btn btn-primary"
-       th:href="@{customer(page=${customers.number - 1},name=${name},email=${email},typeCustomer=${type})}"
+       th:href="@{customer(page=${customers.number - 1},nameSearch=${name},nameSearch=${email},typeCustomerSearch=${type})}"
        th:if="${customers.hasPrevious()}">Previous</a>
     <span th:text="${customers.number +1}"></span>/<span th:text="${customers.totalPages}"></span>
     <a class="btn btn-primary"
-       th:href="@{customer(page=${customers.number + 1 },name=${name},email=${email},typeCustomer=${type})}"
+       th:href="@{customer(page=${customers.number + 1 },nameSearch=${name},nameSearch=${email},typeCustomerSearch=${type})}"
        th:if="${customers.hasNext()}">Next</a>
 </div>
 <br>
