--- a/furuma_manager/src/main/resources/templates/facility/list.html
+++ b/furuma_manager/src/main/resources/templates/facility/list.html
@@ -159,7 +159,8 @@
 </div>
 
 <!-- Modal create -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" th:class="${haserr=='true'? 'modal fade show':'modal fade'}"
+     th:style="${haserr =='true' ?'display:block':'display:none'}">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -167,7 +168,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form method="post" th:action="@{facility/create}" th:object="${facility}">
+                <form method="post" th:action="@{facility/create}" th:object="${facilityDto}">
                     <div class="row">
                         <div class="col-md-4">
                             <button type="button" class="btn btn-primary" th:attr="onclick=|addVilla()|">Villa
@@ -190,6 +191,7 @@
                         </div>
                         <div class="col-md-9">
                             <input th:field="*{name}" type="text">
+                            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red;"></p>
                         </div>
 
                     </div>
@@ -199,6 +201,7 @@
                         </div>
                         <div class="col-md-9">
                             <input th:field="*{area}" type="number">
+                            <p th:if="${#fields.hasErrors('area')}" th:errors="*{area}"></p>
                         </div>
 
                     </div>
@@ -208,6 +211,7 @@
                         </div>
                         <div class="col-md-9">
                             <input th:field="*{cost}" type="number">
+                            <p th:if="${#fields.hasErrors('cost')}" th:errors="*{cost}"></p>
                         </div>
 
                     </div>
@@ -217,6 +221,7 @@
                         </div>
                         <div class="col-md-9">
                             <input th:field="*{maxPeople}" type="number">
+                            <p th:if="${#fields.hasErrors('maxPeople')}" th:errors="*{maxPeople}" style="color: red;"></p>
                         </div>
 
                     </div>
@@ -254,6 +259,8 @@
                         </div>
                         <div class="col-md-9">
                             <input th:field="*{poolArea}" type="text">
+                            <p th:if="${#fields.hasErrors('poolArea')}" th:errors="*{poolArea}" style="color: red;"></p>
+
                         </div>
                     </div>
                     <div class="row" id="numberOfFloors">
@@ -262,6 +269,7 @@
                         </div>
                         <div class="col-md-9">
                             <input th:field="*{numberOfFloors}" type="text">
+                            <p th:if="${#fields.hasErrors('numberOfFloors')}" th:errors="*{numberOfFloors}" style="color: red;"></p>
                         </div>
                     </div>
                     <div class="row" id="facilityFree">
@@ -290,7 +298,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form method="post" th:action="@{facility/edit}" th:object="${facility}">
+                <form method="post" th:action="@{facility/edit}" th:object="${facilityDto}">
                     <input hidden th:field="*{id}" id="id">
                     <input th:field="*{facilityType.id}" id="facilityTypeEdit" hidden>
                     <div class="row">
@@ -390,6 +398,7 @@
 <div th:replace="~{navbar :: footer}"></div>
 </body>
 <script>
+
     function addVilla() {
         document.getElementById("standRoom").style.display = "flex";
         document.getElementById("descriptionOtherConvenience").style.display = "flex";
